# kayak

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mypy.ini  pyproject.toml
.github/workflows/: analysis.yml  release.yml
docker/: Dockerfile
kayak/: __init__.py  app.py  tui.css  tui.py
kayak/ksql/: ksql_service.py  mappers.py  models.py
kayak/renderables/: kayak_name.py  kayak_version.py  ksql_info.py  server_info.py
kayak/styles/: colors.py
kayak/widgets/: header.py
ksql/: create-orders.ksql
scripts/: __init__.py  analyze.py  banner.py  bump.py  docker.py  styles.py
tests/: test_app.py  test_kayak.py
