[tool.poetry]
name = "kayak"
version = "0.2.0"
description = ""
authors = ["Saúl Piña <sauljabin@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sauljabin/kayak"
repository = "https://github.com/sauljabin/kayak"
documentation = "https://github.com/sauljabin/kayak"
keywords = ["kafka", "kayak"]
classifiers = [
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Unix"
]
include = [
    "LICENSE",
]
packages = [
    { include = "kayak" },
]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.2"
pyfiglet = "^0.8.post1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
changelog-cli = "^0.7.1"
toml = "^0.10.2"
pre-commit = "^3.1.1"
isort = "^5.12.0"
black = "^23.1.0"
flake8 = "^6.0.0"
autoflake = "^2.0.1"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kayak = "kayak.app:main"
kyk = "kayak.app:main"

[tool.isort]
profile = "black"