[tool.poetry]
name = "kayak"
version = "0.2.1"
description = ""
authors = ["Saúl Piña <sauljabin@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sauljabin/kayak"
repository = "https://github.com/sauljabin/kayak"
documentation = "https://github.com/sauljabin/kayak"
keywords = ["kafka", "kayak"]
classifiers = [
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Unix"
]
include = [
    "LICENSE",
]
packages = [
    { include = "kayak" },
]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13"
click = "^8"
httpx = {extras = ["http2"], version = "^0"}
pyfiglet = "*"
textual = "*"

[tool.poetry.dev-dependencies]
changelog-cli = "*"
toml = "*"
pre-commit = "*"
isort = "*"
black = "*"
flake8 = "*"
autoflake = "*"
mypy = "*"
unittest = "*"
types-attrs = "*"
types-requests = "^2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kayak = "kayak.app:main"
kyk = "kayak.app:main"

[tool.isort]
profile = "black"